<resources>
    <string name="app_name">homework2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_screen">Main</string>
    <string name="profile_screen">Profile</string>
    <string name="settings_screen">Settings</string>
    <string name="music_screen">Music</string>
    <string name="video_screen">Video</string>
    <string name="typeText">Введите текст</string>
    <string name="send">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>